--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
                 <div ng-click="createImageBox()" class="button-square">
                   <div class="shine-square"></div>
                   <div class="icon-flex">
-                    <i class="material-icons">image</i>
+                      <img class="scribble-icon" src="./images/ornament_star.png">
                   </div>
                 </div>
                 <div ng-click="createVideoBox()" class="button-square">
                   <div class="shine-square"></div>
                   <div class="icon-flex">
-                    <i class="material-icons">play_circle_outline</i>
+                      <img class="scribble-icon" src="./images/ornament_green.png">
                   </div>
                 </div>
                 <div ng-click="createScribbleBox()" class="button-square">
                   <div class="shine-square"></div>
                   <div class="icon-flex">
-                    <img class="scribble-icon" src="./images/scribbles-01.png">
+                    <img class="scribble-icon" src="./images/ornament_blue.png">
                   </div>
                 </div>
                 <div ng-click="createScribbleCircle()" class="button-square">
                   <div class="shine-square"></div>
                   <div class="icon-flex">
-                    <img class="scribble-icon" src="./images/scribbles-02.png">
+                    <img class="scribble-icon" src="./images/ornament_red.png">
                   </div>
                 </div>
               </div>
