--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
                     <img class="scribble-icon" src="./images/ornament_red.png">
                   </div>
                 </div>
+                <div ng-click="createPresent1()" class="button-square">
+                  <div class="shine-square"></div>
+                  <div class="icon-flex">
+                    <img class="scribble-icon" src="./images/present1.png">
+                  </div>
+                </div>
+                <div ng-click="createPresent2()" class="button-square">
+                  <div class="shine-square"></div>
+                  <div class="icon-flex">
+                    <img class="scribble-icon" src="./images/present2.png">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
